# a190rithm

./: .env.example  .gitignore  .mcp.json  .vimspector.json  CLAUDE.md  README.md  build.sbt  pyproject.toml  pyrightconfig.json
.gemini/: settings.json
a190rithm/models/: text_classification.py  text_classification_bert.py  text_classification_gpt2.py  text_classification_roberta.py
a190rithm/torch/models/: rnn.py  text_classification_bert.py  text_classification_roberta.py
a190rithm/torch/utils/: __init__.py
a190rithm/utils/: __init__.py
docs/: CLAUDE_ITERATION_GUIDE.md  CLAUDE_TEMPLATE.md
docs/agent/: gemini_iteration_plan.md  gemini_template_analyst.md  guidelines_iteration_report.md  jupyter-mcp-server-analysis.md  workflow_guidelines.md
docs/agent/logs/: session-2026-01-12T17-09-cabf2733.json  session-2026-01-14T03-54-28513f97.json
notebooks/: analysis.ipynb
project/: plugins.sbt
sbt-launcher/conf/: sbtconfig.txt
scripts/: check_env.sh  init.sh  start_jupyter.sh
specs/001-kaggle-data-parquet/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kaggle-data-parquet/checklists/: requirements.md
specs/001-kaggle-data-parquet/contracts/: cli.md  python_api.md
src/a190rithm/: version.py
src/a190rithm/tools/: __init__.py
src/main/scala/: AssociationRules.scala
src/test/scala/: AssociationRulesTest.scala
tests/: input_test.py  utils_test.py  version_test.py
tests/models/: text_classfication_bert_test.py  text_classfication_gpt2_test.py  text_classfication_roberta_test.py  text_classfication_test.py
tests/tensorflow/models/: test_random_seed_reproducibility.py  test_temporal_attention_block.py  test_temporal_attention_mask_toggle.py  test_temporal_block.py
tests/tools/: __init__.py  test_tfrecord_viewer.py
tests/tools/kaggle_downloader/: __init__.py  conftest.py  test_config.py  test_converter.py  test_exceptions.py  test_models.py  test_storage.py
tests/torch/models/: bert_test.py  gpt2_test.py  roberta_test.py  text_classfication_bert_test.py  text_classfication_gpt2_test.py  text_classfication_roberta_test.py
(+26 files in other folders)
